[gd_scene load_steps=10 format=3 uid="uid://ducrupk233qvp"]

[ext_resource type="Texture2D" uid="uid://dgcw0vs3drey1" path="res://assets/background.png" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Buttons/VioletGenerator/VioletGenerator.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://nwbl03ueqyor" path="res://scenes/Buttons/RedGenerator/RedGenerator.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/Buttons/Reset/Reset.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/Buttons/RedGenerator/RedGenerator.gd" id="4_p1ece"]
[ext_resource type="Script" path="res://scenes/Menu/Menu.gd" id="5"]
[ext_resource type="Script" path="res://scenes/Buttons/VioletGenerator/VioletGenerator.gd" id="6_wtgmn"]
[ext_resource type="Script" path="res://scenes/Buttons/Reset/Reset.gd" id="8_w8m7w"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1519.98, 67.3924)

[node name="Menu" type="Node2D"]
script = ExtResource("5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575.5, 323.5)
scale = Vector2(3.59687, 3.235)
texture = ExtResource("1")

[node name="RedGenerator" parent="." instance=ExtResource("3")]
offset_left = 93.0
offset_top = 29.0
offset_right = 221.0
offset_bottom = 157.0
script = ExtResource("4_p1ece")

[node name="VioletGenerator" parent="." instance=ExtResource("2")]
offset_left = 929.0
offset_top = 29.0
offset_right = 1057.0
offset_bottom = 157.0
script = ExtResource("6_wtgmn")

[node name="Reset" parent="." instance=ExtResource("4")]
offset_left = 518.0
offset_top = 251.0
offset_right = 670.0
offset_bottom = 318.0
script = ExtResource("8_w8m7w")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(513.885, 577.225)

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("1")

[node name="CountLabel" type="Label" parent="."]
offset_left = 506.0
offset_top = 205.0
offset_right = 686.0
offset_bottom = 228.0
text = "Cantidad de Instancias:
"

[connection signal="button_down" from="RedGenerator" to="RedGenerator" method="_on_button_down"]
[connection signal="button_down" from="VioletGenerator" to="VioletGenerator" method="_on_button_down"]
[connection signal="button_down" from="Reset" to="Reset" method="_on_button_down"]
